// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMethodRequest schema test invalid values: 0 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
"
`;

exports[`CallMethodRequest schema test invalid values: 1 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
  must NOT have additional properties, but found 'methodId'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
"
`;

exports[`CallMethodRequest schema test invalid values: 2 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
  must NOT have additional properties, but found 'inputArguments'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
"
`;

exports[`CallMethodRequest schema test invalid values: 3 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
  must NOT have additional properties, but found 'methodId'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
  must NOT have additional properties, but found 'inputArguments'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
"
`;

exports[`CallMethodRequest schema test invalid values: 4 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
  must NOT have additional properties, but found 'methodId'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
  must NOT have additional properties, but found 'namespaceIndex'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
"
`;
